--- a/src/template.html
+++ b/src/template.html
@@ -26,24 +26,26 @@
 	</head>
 	<body>
 		<script>
-		 window.fbAsyncInit = function() {
-			 FB.init({
-				 appId      : '307302537052260',
-				 cookie     : true,
-				 xfbml      : true,
-				 version    : 'v8.0'
-			 });
+		 if (window) {
+			 window.fbAsyncInit = function() {
+				 FB.init({
+					 appId      : '307302537052260',
+					 cookie     : true,
+					 xfbml      : true,
+					 version    : 'v8.0'
+				 });
 
-			 FB.AppEvents.logPageView();
-		 };
+				 FB.AppEvents.logPageView();
+			 };
 
-		 (function(d, s, id){
-			 var js, fjs = d.getElementsByTagName(s)[0];
-			 if (d.getElementById(id)) {return;}
-			 js = d.createElement(s); js.id = id;
-			 js.src = "https://connect.facebook.net/en_US/sdk.js";
-			 fjs.parentNode.insertBefore(js, fjs);
-		 }(document, 'script', 'facebook-jssdk'));
+			 (function(d, s, id){
+				 var js, fjs = d.getElementsByTagName(s)[0];
+				 if (d.getElementById(id)) {return;}
+				 js = d.createElement(s); js.id = id;
+				 js.src = "https://connect.facebook.net/en_US/sdk.js";
+				 fjs.parentNode.insertBefore(js, fjs);
+			 }(document, 'script', 'facebook-jssdk'));
+		 }
 		</script>
 		<% preact.bodyEnd %>
 		<div id="fb-root"></div>
