--- a/src/template.html
+++ b/src/template.html
@@ -26,7 +26,7 @@
 	</head>
 	<body>
 		<script>
-		 if (window) {
+		 if (typeof window !== "undefined") {
 			 window.fbAsyncInit = function() {
 				 FB.init({
 					 appId      : '307302537052260',
