--- a/src/template.html
+++ b/src/template.html
@@ -7,6 +7,9 @@
 		<meta name="mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<meta property="og:type" content="website" />
+		<% if(htmlWebpackPlugin.options.seo && 'url' in htmlWebpackPlugin.options.seo) {%>
+		<meta property="og:url" content="<%= htmlWebpackPlugin.options.seo.url %>" />
+		<% } %>
 		<meta property="og:title" content="<%= (htmlWebpackPlugin.options.seo && htmlWebpackPlugin.options.seo.title) || htmlWebpackPlugin.options.title %>" />
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 		<% if(htmlWebpackPlugin.options.seo && 'cover' in htmlWebpackPlugin.options.seo) {%>
