--- a/src/template.html
+++ b/src/template.html
@@ -15,16 +15,18 @@
 		<% if(htmlWebpackPlugin.options.seo && 'cover' in htmlWebpackPlugin.options.seo) {%>
 		<meta property="og:image" content="<%= htmlWebpackPlugin.options.seo.cover %>" />
 		<% } %>
-		<% if(htmlWebpackPlugin.options.seo && 'subtitle' in htmlWebpackPlugin.options.seo) {%>
+		<% if(htmlWebpackPlugin.options.seo && 'subtitle' in htmlWebpackPlugin.options.seo){ %>
 		<meta property="og:description" content="<%= htmlWebpackPlugin.options.seo.subtitle %>" />
 		<meta property="description" content="<%= htmlWebpackPlugin.options.seo.subtitle %>" />
+		<meta property="twitter:description" content="<%= htmlWebpackPlugin.options.seo.subtitle %>" />
+		<% } else{ %>
+		<meta property="og:description" content="&hellip;" />
+		<meta property="description" content="&hellip;" />
+		<meta property="twitter:description" content="&hellip;" />
 		<% } %>
 		<meta name="twitter:card" content="<%= (htmlWebpackPlugin.options.seo && 'cover' in htmlWebpackPlugin.options.seo) ? 'summary_large_image' : 'summary'%>" />
 		<% if(htmlWebpackPlugin.options.seo && 'cover' in htmlWebpackPlugin.options.seo) {%>
 		<meta name="twitter:image" content="<%= htmlWebpackPlugin.options.seo.cover %>">
-		<% } %>
-		<% if(htmlWebpackPlugin.options.seo && 'subtitle' in htmlWebpackPlugin.options.seo) {%>
-		<meta property="twitter:description" content="<%= htmlWebpackPlugin.options.seo.subtitle %>" />
 		<% } %>
 		<% preact.headEnd %>
 	</head>
